force-app/main/default/objects/Canvas_Settings__c/Canvas_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Canvas settings for callouts to the API</description>
    <label>Canvas API Settings</label>
</CustomObject>