force-app/main/default/objects/Canvas_Settings__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck this box to stop callouts to the Canvas API</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>