force-app/main/default/objects/Canvas_Settings__c/fields/ApiGatewayBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>ApiGatewayBaseUrl__c</fullName>
    <label>API Gateway Base URL</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>