force-app/main/default/objects/Canvas_Settings__c/fields/ApiGatewayKey__c.field-meta.xml
<CustomField>
    <fullName>ApiGatewayKey__c</fullName>
    <label>API Gateway Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>