force-app/main/default/objects/Canvas_Settings__c/fields/base_url__c.field-meta.xml
<CustomField>
    <fullName>base_url__c</fullName>
    <label>Base URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>