force-app/main/default/objects/Canvas_Settings__c/fields/sub_account_id__c.field-meta.xml
<CustomField>
    <fullName>sub_account_id__c</fullName>
    <defaultValue></defaultValue>
    <externalId>true</externalId>
    <label>Sub-account ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>