force-app/main/default/objects/Canvas_Settings__c/fields/token__c.field-meta.xml
<CustomField>
    <fullName>token__c</fullName>
    <description>Canvas API token</description>
    <label>token</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>